# strands-agent-example

./: .editorconfig  .gitignore  Makefile  README.md  cdk.json  package-lock.json  package.json  pyproject.toml
.github/: deploy.yml
.github/workflows/: deploy.yml
.husky/: pre-commit
app/: agent.py  main.py  tools.py
lib/: strands-agent-example-stack.ts
test/: strands-agent-example.test.ts
